# fhevm-forge

./: .gitignore  Cargo.toml  Makefile  PROJECT.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: scaffold_analysis.md
files/: AGENT_MD_TEMPLATE.md  IMPLEMENTATION.md  SPEC.md  TEMPLATES.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/components/ui/: CodeBlock.tsx  FeatureCard.tsx
my-test/frontend/.next/: trace
src/: config.rs  lib.rs  main.rs  update.rs
src/commands/: deploy.rs  doctor.rs  gas.rs  init.rs  lint.rs  mod.rs
src/deployer/: chains.rs  mod.rs  runner.rs
src/gas/: costs.rs  mod.rs  parser.rs  reporter.rs
src/linter/: mod.rs  reporter.rs
src/linter/rules/: euint_overflow.rs  get_relayer_call.rs  handle_index_oob.rs  input_proof_reuse.rs  missing_allow_addr.rs  missing_allow_this.rs  missing_only_gateway.rs  mod.rs  resolver_arg_count.rs  view_fhe_function.rs
src/scaffold/: generator.rs  templates.rs
templates/auction/script/: Deploy.s.sol
templates/auction/src/: BlindAuction.sol
templates/auction/test/: BlindAuction.t.sol
templates/blank/src/: Counter.sol
templates/blank/test/: Counter.t.sol
templates/erc7984/script/: Deploy.s.sol
templates/erc7984/src/: ConfidentialToken.sol
templates/erc7984/test/: ConfidentialToken.t.sol
templates/frontend/: .env.local.example  next.config.ts  package.json.tera  tsconfig.json
templates/frontend/app/: globals.css  layout.tsx.tera  page.tsx  providers.tsx
templates/frontend/hooks/: useEncrypt.ts  useReencrypt.ts
templates/lending/script/: Deploy.s.sol
templates/lending/src/: ConfidentialVault.sol  PriceOracle.sol
templates/lending/src/tokens/: ConfidentialCollateral.sol  ConfidentialDebt.sol
templates/lending/test/: ConfidentialVault.t.sol
templates/shared/: .env.example  .gitignore  AGENT.md  AGENT.md.tera  README.md.tera  foundry.toml.tera  package.json.tera  tsconfig.json
templates/shared/agent/: fhevm-agent.ts  package.json.tera
templates/shared/hooks/: useEncrypt.ts  useHealthCheck.ts  useReencrypt.ts
templates/shared/lib/fhevm/: FhevmProvider.tsx  config.ts  decrypt.ts  encrypt.ts  gateway.ts  index.ts  instance.ts
templates/shared/sdk/: package.json.tera
templates/voting/script/: Deploy.s.sol
templates/voting/src/: ConfidentialVoting.sol
templates/voting/test/: ConfidentialVoting.t.sol
test/: AGENT.md  README.md  fhevm-forge.toml  package.json
test/agent/lib/: fhevm-agent.ts
test/lib/fhevm/: errors.ts  gateway.ts  index.ts  instance.ts
test/lib/forge-fhevm/: remappings.txt
test/lib/hooks/: useEncrypt.ts  useReencrypt.ts
tests/: gas_test.rs  init_test.rs  lint_test.rs
