[package]
name        = "fhevm-forge"
version     = "0.2.3"
edition     = "2021"
description = "Foundry scaffold, deployer, gas estimator and linter for Zama FHEVM"
license     = "MIT"
repository  = "https://github.com/Godbrand0/fhevm-forge"
keywords    = ["fhevm", "zama", "foundry", "fhe", "blockchain"]
categories  = ["command-line-utilities", "cryptography"]
readme      = "README.md"
exclude     = ["target/**", "files/**", "files.zip", ".claude/**", "*.zip", "my-*/**", "fhevm-forge-sdk/**", "test/**"]

[[bin]]
name = "fhevm-forge"
path = "src/main.rs"

[lib]
name = "fhevm_forge"
path = "src/lib.rs"

[dependencies]
# CLI
clap        = { version = "4",    features = ["derive", "env"] }

# Async runtime
tokio       = { version = "1",    features = ["full"] }

# Template rendering
tera        = "1"

# Terminal UI
colored     = "2"
indicatif   = "0.17"
dialoguer   = "0.11"

# File system
fs_extra    = "1"
walkdir     = "2"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Error handling
anyhow      = "1"
thiserror   = "1"

# HTTP (doctor command + dependency downloads)
reqwest     = { version = "0.13", features = ["json"] }

# Zip extraction (fhevm-solidity soldeer workaround)
zip         = { version = "2", default-features = false, features = ["deflate"] }

# Regex (linter pattern matching)
regex       = "1"

# Date/time (template year variable)
chrono      = "0.4"

[dev-dependencies]
tempfile    = "3"
assert_cmd  = "2"
predicates  = "3"
